force-app/main/default/objects/Retail_Update_standard_packaging_size__c/Retail_Update_standard_packaging_size__c.object-meta.xml
<CustomObject>
    <label>Retail Update standard packaging size</label>
    <nameField>
        <displayFormat>RUSI-{0000}</displayFormat>
        <label>Retail Update standard packaging size Na</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Update standard packaging sizes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>