force-app/main/default/objects/Retail_Update_standard_packaging_size__c/fields/Current_Packaging_Size__c.field-meta.xml
<CustomField>
    <fullName>Current_Packaging_Size__c</fullName>
    <formula>Product__r.Std_Package_Size__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Packaging Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>