force-app/main/default/objects/Retail_Update_standard_packaging_size__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product</label>
    <referenceTo>Retail_Product__c</referenceTo>
    <relationshipLabel>Retail Update standard packaging sizes</relationshipLabel>
    <relationshipName>Retail_Update_standard_packaging_sizes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>