force-app/main/default/objects/Retail_Update_standard_packaging_size__c/fields/Updated_Packaging_Size__c.field-meta.xml
<CustomField>
    <fullName>Updated_Packaging_Size__c</fullName>
    <label>Updated Packaging Size</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>