force-app/main/default/objects/Retail_Update_standard_packaging_size__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Updated_Packaging_Size__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>